policies/gatekeeper/k8s-disallow-defaultsa.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowdefaultsa
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowDefaultSA
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowdefaultsa

      violation[{"msg": msg}] {
        input.review.kind.kind == "Pod"
        sa := input.review.object.spec.serviceAccountName
        sa == "default"
        msg := "Usage of the default service account is not allowed"
      }
