policies/gatekeeper/k8s-restrict-wildcardRBAC-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictWildcardRBAC
metadata:
  name: restrict-wildcard-rbac
spec:
  enforcementAction: deny
  match:
    namespaceSelector:
      matchLabels:
        security-level: hardened
