policies/gatekeeper/k8s-restrict-wildcardRBAC.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srestrictwildcardrbac
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictWildcardRBAC
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srestrictwildcardrbac

      # Block wildcard resources in ClusterRoles
      violation[{"msg": msg}] {
        input.review.kind.kind == "ClusterRole"
        r := input.review.object.rules[_]
        r.resources[_] == "*"
        msg := "Wildcard resource access in ClusterRole is not allowed"
      }

      # Block wildcard verbs in ClusterRoles
      violation[{"msg": msg}] {
        input.review.kind.kind == "ClusterRole"
        r := input.review.object.rules[_]
        r.verbs[_] == "*"
        msg := "Wildcard verb access is not allowed"
      }

      # Block wildcard verbs in Roles and ClusterRoles
      violation[{"msg": msg}] {
        kind := input.review.kind.kind
        obj := input.review.object
        # check if kind is Role or ClusterRole
        kind == "Role"
        some i
        obj.rules[i].verbs[_] == "*"
        msg := sprintf("Wildcard verbs are not allowed in Role/ClusterRole: %v", [obj.metadata.name])
      }
      
      # Block wildcard verbs in Roles and ClusterRoles
      violation[{"msg": msg}] {
        kind := input.review.kind.kind
        obj := input.review.object
        # check if kind is Role or ClusterRole
        kind == "ClusterRole"                          
        some i
        obj.rules[i].verbs[_] == "*"
        msg := sprintf("Wildcard verbs are not allowed in Role/ClusterRole: %v", [obj.metadata.name])
      } 

      # Block default ServiceAccount in RoleBindings / ClusterRoleBindings
      violation[{"msg": msg}] {
        kind := input.review.kind.kind
        obj := input.review.object
        kind == "RoleBinding"
        subjects := [s | s := obj.subjects[_]; s.kind == "ServiceAccount"]
        some i
        subjects[i].name == "default"
        msg := sprintf("Binding secrets to default SA is forbidden: %v", [obj.metadata.name])
      }
      
      # Block default ServiceAccount in RoleBindings / ClusterRoleBindings 
      violation[{"msg": msg}] {
        kind := input.review.kind.kind
        obj := input.review.object
        kind == "ClusterRoleBinding"
        subjects := [s | s := obj.subjects[_]; s.kind == "ServiceAccount"]
        some i
        subjects[i].name == "default"
        msg := sprintf("Binding secrets to default SA is forbidden: : %v", [obj.metadata.name])
      }
